создать модуль платежей
